* 2016.10.12 - added latest x86/x86_64 android OS descriptions (needed for ARM Workload Automation via CK)

* 2016.10.11 - added 'shell' function to 'os' module to automate simple script execution

* 2016.10.10 - added detection of CPU clusters for Workload automation

* 2016.10.05 - obtaining real serial number of ADB devices (if via network) + adding dep on ADB tool for remote devices

* 2016.09.27 - added support for remote execution unified across all platforms

* 2016.09.26 - changed 'device' to 'machine'

* 2016.09.25 - various improvements in package/soft ...

* 2016.09.24 - added tool.show-cuda-devices and tool.show-opencl-devices
               for CK widget "platform.gpgpu"

* 2016.09.23 - added optional flag --target to all platform.*

* 2016.09.21 - improved "device" for ARM WA

* 2016.09.19 - added soft:compiler.gfortran
             - added soft:tool.adb (for ARM workload automation)

* 2016.09.18 - added many new Android descriptions (past and new such as Android 7.0.0)
             - added 'add', 'browse' and 'show' functions to 'device'
             - improving new CPU format detection (Linux/Android/MacOS)

* 2016.09.10 - added 'device' module to unify description of available user devices for crowd-benchmarking/crowd-tuning

* 2016.09.09 - updated DVDT OpenCL profiler soft description

* 2016.09.07 - added --env and --env. keys to ck install package to be able to preset env variables

* 2016.09.05 - added HDF5 library description
             - changed soft functions 'detect' to 'internal_detect' and 'check' to 'detect'

* 2016.09.01 - fixed recursive search of directories in Python 2.x with non-ascii directories
 
* 2016.08.30 - added -fPIE to LLVM soft desc for Android based on ARM64

* 2016.08.11 - fixed detection of environment if already installed when customized version've changed
             - added record_script flag to quickly rebuild packages without CK

* 2016.08.08 - added flag "extra_path" to package install