@@ -1,5 +1,8 @@
 {
   "actions": {
+    "browse": {
+      "desc": "browse platform.gpu participated in experiment crowdsourcing (crowd-benchmarking and crowd-tuning)"
+    },
     "detect": {
       "desc": "detect various properties (features) of a given GPU"
     }, 
