@@ -1,20 +1,20 @@
 {
-  "backup_data_uid": "707ccdfe444cafac", 
-  "backup_module_uid": "032630d041b4fd8a", 
-  "backup_module_uoa": "module", 
+  "backup_data_uid": "707ccdfe444cafac",
+  "backup_module_uid": "032630d041b4fd8a",
+  "backup_module_uoa": "module",
   "control": {
-    "author": "Grigori Fursin", 
-    "author_email": "Grigori.Fursin@cTuning.org", 
-    "author_webpage": "http://fursin.net", 
-    "copyright": "See CK COPYRIGHT.txt for copyright details", 
-    "engine": "CK", 
-    "iso_datetime": "2015-02-24T09:36:24.744000", 
-    "license": "See CK LICENSE.txt for licensing details", 
+    "author": "Grigori Fursin",
+    "author_email": "Grigori.Fursin@cTuning.org",
+    "author_webpage": "http://fursin.net",
+    "copyright": "See CK COPYRIGHT.txt for copyright details",
+    "engine": "CK",
+    "iso_datetime": "2015-02-24T09:36:24.744000",
+    "license": "See CK LICENSE.txt for licensing details",
     "version": [
-      "1", 
-      "1", 
+      "1",
+      "1",
       "0205"
     ]
-  }, 
+  },
   "data_name": "platform"
 }
