@@ -1,39 +1,42 @@
 {
   "actions": {
+    "browse": {
+      "desc": "browse platforms participated in experiment crowdsourcing (crowd-benchmarking and crowd-tuning)"
+    },
     "deinit": {
       "desc": "de-initialize device (put shared computational devices to powersave mode after experiments)"
-    }, 
+    },
     "detect": {
       "desc": "detect various properties (features) of a given platform"
-    }, 
+    },
     "exchange": {
       "desc": "exchange various information with a public server (for crowd-benchmarking/crow-tuning)"
-    }, 
+    },
     "get_from_wmic": {
       "desc": "get information from WMIC tool on Windows"
-    }, 
-    "show": {
-      "desc": "show entries in user-friendly html format", 
-      "for_web": "yes"
-    }, 
+    },
     "init_device": {
       "desc": "init remote device (useful when preparing shared computational device)"
+    },
+    "show": {
+      "desc": "show entries in user-friendly html format",
+      "for_web": "yes"
     }
-  }, 
-  "cfg_uoa":"program-crowdtuning",
-  "copyright": "See CK COPYRIGHT.txt for copyright details", 
-  "desc": "detecting and describin platforms", 
-  "developer": "Grigori Fursin", 
-  "developer_email": "Grigori.Fursin@cTuning.org", 
-  "developer_webpage": "http://fursin.net", 
-  "license": "See CK LICENSE.txt for licensing details", 
+  },
+  "cfg_uoa": "program-crowdtuning",
+  "copyright": "See CK COPYRIGHT.txt for copyright details",
+  "desc": "detecting and describin platforms",
+  "developer": "Grigori Fursin",
+  "developer_email": "Grigori.Fursin@cTuning.org",
+  "developer_webpage": "http://fursin.net",
+  "license": "See CK LICENSE.txt for licensing details",
   "module_deps": {
-    "machine":"84be34883a81b2a9",
-    "os": "0440cb72c2bc5cc6", 
-    "platform.gpu": "55ec7775f4afaabd", 
-    "platform.cpu": "aa6b542a420b8db9", 
-    "platform.os": "41e31cc4496b8a8e", 
-    "repo": "befd7892b0d469e9",
-    "cfg":"b34231a3467566f8"
+    "cfg": "b34231a3467566f8",
+    "machine": "84be34883a81b2a9",
+    "os": "0440cb72c2bc5cc6",
+    "platform.cpu": "aa6b542a420b8db9",
+    "platform.gpu": "55ec7775f4afaabd",
+    "platform.os": "41e31cc4496b8a8e",
+    "repo": "befd7892b0d469e9"
   }
 }
