@@ -1,129 +1,143 @@
 {
   "control": [
     {
-      "author": "Grigori Fursin", 
-      "author_email": "Grigori.Fursin@cTuning.org", 
-      "author_webpage": "http://fursin.net", 
-      "copyright": "See CK COPYRIGHT.txt for copyright details", 
-      "engine": "CK", 
-      "iso_datetime": "2015-02-24T09:44:13.398000", 
-      "license": "See CK LICENSE.txt for licensing details", 
+      "author": "Grigori Fursin",
+      "author_email": "Grigori.Fursin@cTuning.org",
+      "author_webpage": "http://fursin.net",
+      "copyright": "See CK COPYRIGHT.txt for copyright details",
+      "engine": "CK",
+      "iso_datetime": "2015-02-24T09:44:13.398000",
+      "license": "See CK LICENSE.txt for licensing details",
       "version": [
-        "1", 
-        "1", 
+        "1",
+        "1",
         "0205"
       ]
-    }, 
+    },
     {
-      "author": "Grigori Fursin", 
-      "author_email": "Grigori.Fursin@cTuning.org", 
-      "author_webpage": "http://fursin.net", 
-      "copyright": "See CK COPYRIGHT.txt for copyright details", 
-      "engine": "CK", 
-      "iso_datetime": "2015-02-26T14:14:28.795000", 
-      "license": "See CK LICENSE.txt for licensing details", 
+      "author": "Grigori Fursin",
+      "author_email": "Grigori.Fursin@cTuning.org",
+      "author_webpage": "http://fursin.net",
+      "copyright": "See CK COPYRIGHT.txt for copyright details",
+      "engine": "CK",
+      "iso_datetime": "2015-02-26T14:14:28.795000",
+      "license": "See CK LICENSE.txt for licensing details",
       "version": [
-        "1", 
-        "1", 
+        "1",
+        "1",
         "0205"
       ]
-    }, 
+    },
     {
-      "author": "Grigori Fursin", 
-      "author_email": "Grigori.Fursin@cTuning.org", 
-      "author_webpage": "http://fursin.net", 
-      "copyright": "See CK COPYRIGHT.txt for copyright details", 
-      "engine": "CK", 
-      "iso_datetime": "2015-03-13T13:37:12.843000", 
-      "license": "See CK LICENSE.txt for licensing details", 
+      "author": "Grigori Fursin",
+      "author_email": "Grigori.Fursin@cTuning.org",
+      "author_webpage": "http://fursin.net",
+      "copyright": "See CK COPYRIGHT.txt for copyright details",
+      "engine": "CK",
+      "iso_datetime": "2015-03-13T13:37:12.843000",
+      "license": "See CK LICENSE.txt for licensing details",
       "version": [
-        "1", 
-        "1", 
+        "1",
+        "1",
         "0205"
       ]
-    }, 
+    },
     {
-      "author": "Grigori Fursin", 
-      "author_email": "Grigori.Fursin@cTuning.org", 
-      "author_webpage": "http://fursin.net", 
-      "copyright": "See CK COPYRIGHT.txt for copyright details", 
-      "engine": "CK", 
-      "iso_datetime": "2015-03-13T13:39:11.304000", 
-      "license": "See CK LICENSE.txt for licensing details", 
+      "author": "Grigori Fursin",
+      "author_email": "Grigori.Fursin@cTuning.org",
+      "author_webpage": "http://fursin.net",
+      "copyright": "See CK COPYRIGHT.txt for copyright details",
+      "engine": "CK",
+      "iso_datetime": "2015-03-13T13:39:11.304000",
+      "license": "See CK LICENSE.txt for licensing details",
       "version": [
-        "1", 
-        "1", 
+        "1",
+        "1",
         "0205"
       ]
-    }, 
+    },
     {
-      "author": "Grigori Fursin", 
-      "author_email": "Grigori.Fursin@cTuning.org", 
-      "author_webpage": "http://fursin.net", 
-      "copyright": "See CK COPYRIGHT.txt for copyright details", 
-      "engine": "CK", 
-      "iso_datetime": "2015-03-13T18:00:25.474000", 
-      "license": "See CK LICENSE.txt for licensing details", 
+      "author": "Grigori Fursin",
+      "author_email": "Grigori.Fursin@cTuning.org",
+      "author_webpage": "http://fursin.net",
+      "copyright": "See CK COPYRIGHT.txt for copyright details",
+      "engine": "CK",
+      "iso_datetime": "2015-03-13T18:00:25.474000",
+      "license": "See CK LICENSE.txt for licensing details",
       "version": [
-        "1", 
-        "1", 
+        "1",
+        "1",
         "0205"
       ]
-    }, 
+    },
     {
-      "author": "Grigori Fursin", 
-      "author_email": "Grigori.Fursin@cTuning.org", 
-      "author_webpage": "http://fursin.net", 
-      "copyright": "See CK COPYRIGHT.txt for copyright details", 
-      "engine": "CK", 
-      "iso_datetime": "2015-03-27T17:07:23.387664", 
-      "license": "See CK LICENSE.txt for licensing details", 
+      "author": "Grigori Fursin",
+      "author_email": "Grigori.Fursin@cTuning.org",
+      "author_webpage": "http://fursin.net",
+      "copyright": "See CK COPYRIGHT.txt for copyright details",
+      "engine": "CK",
+      "iso_datetime": "2015-03-27T17:07:23.387664",
+      "license": "See CK LICENSE.txt for licensing details",
       "version": [
-        "1", 
-        "1", 
+        "1",
+        "1",
         "0205"
       ]
-    }, 
+    },
     {
-      "author": "Grigori Fursin", 
-      "author_email": "Grigori.Fursin@cTuning.org", 
-      "author_webpage": "http://fursin.net", 
-      "copyright": "See CK COPYRIGHT.txt for copyright details", 
-      "engine": "CK", 
-      "iso_datetime": "2015-04-18T19:04:10.533046", 
-      "license": "See CK LICENSE.txt for licensing details", 
+      "author": "Grigori Fursin",
+      "author_email": "Grigori.Fursin@cTuning.org",
+      "author_webpage": "http://fursin.net",
+      "copyright": "See CK COPYRIGHT.txt for copyright details",
+      "engine": "CK",
+      "iso_datetime": "2015-04-18T19:04:10.533046",
+      "license": "See CK LICENSE.txt for licensing details",
       "version": [
-        "1", 
-        "1", 
+        "1",
+        "1",
         "0205"
       ]
-    }, 
+    },
     {
-      "author": "Grigori Fursin", 
-      "author_email": "Grigori.Fursin@cTuning.org", 
-      "author_webpage": "http://fursin.net", 
-      "copyright": "See CK COPYRIGHT.txt for copyright details", 
-      "engine": "CK", 
-      "iso_datetime": "2015-04-25T10:42:57.164000", 
-      "license": "See CK LICENSE.txt for licensing details", 
+      "author": "Grigori Fursin",
+      "author_email": "Grigori.Fursin@cTuning.org",
+      "author_webpage": "http://fursin.net",
+      "copyright": "See CK COPYRIGHT.txt for copyright details",
+      "engine": "CK",
+      "iso_datetime": "2015-04-25T10:42:57.164000",
+      "license": "See CK LICENSE.txt for licensing details",
       "version": [
-        "1", 
-        "1", 
+        "1",
+        "1",
         "0205"
       ]
-    }, 
+    },
     {
-      "author": "Grigori Fursin", 
-      "author_email": "Grigori.Fursin@cTuning.org", 
-      "author_webpage": "http://fursin.net", 
-      "copyright": "See CK COPYRIGHT.txt for copyright details", 
-      "engine": "CK", 
-      "iso_datetime": "2016-01-04T21:09:29.089000", 
-      "license": "See CK LICENSE.txt for licensing details", 
+      "author": "Grigori Fursin",
+      "author_email": "Grigori.Fursin@cTuning.org",
+      "author_webpage": "http://fursin.net",
+      "copyright": "See CK COPYRIGHT.txt for copyright details",
+      "engine": "CK",
+      "iso_datetime": "2016-01-04T21:09:29.089000",
+      "license": "See CK LICENSE.txt for licensing details",
       "version": [
-        "1", 
-        "6", 
+        "1",
+        "6",
         "12x"
+      ]
+    },
+    {
+      "author": "cTuning foundation",
+      "author_email": "admin@cTuning.org",
+      "author_webpage": "http://cTuning.org",
+      "copyright": "See CK COPYRIGHT.txt for copyright details",
+      "engine": "CK",
+      "iso_datetime": "2016-10-12T16:33:15.035158",
+      "license": "See CK LICENSE.txt for licensing details",
+      "version": [
+        "1",
+        "8",
+        "3dev"
       ]
     }
   ]
